Correct margin issues on small displays

--- a/src/Sass/Layout/Container.scss
+++ b/src/Sass/Layout/Container.scss
@@ -7,6 +7,11 @@
     &:not(:first-of-type){
         margin-bottom: 60px;
     }
+
+    @media screen and (max-width: 768px) {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .img-container {
