--- a/src/Sass/Layout/Footer.scss
+++ b/src/Sass/Layout/Footer.scss
@@ -7,6 +7,13 @@
         align-items: center;
         height: 100px;
         margin-bottom: 0 !important;
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+            height: 100%;
+            row-gap: 1rem;
+            padding: 20px 0 !important;
+        }
     }
 
     &__socials {
